# FX-MOVIES

./: app.json  package-lock.json  package.json
.kiro/specs/adguard-integration/: design.md  requirements.md  tasks.md
__tests__/: AdBlocker.test.ts
android/: gradle.properties  link-assets-manifest.json  settings.gradle  test_adblocker.js
android/app/: build.gradle
android/app/src/main/cpp/: AdGuardJNIBridge.cpp  CMakeLists.txt  FilterEngine.cpp  FilterRule.cpp  UrlParser.cpp
android/app/src/main/cpp/include/: FilterEngine.h  FilterRule.h  UrlParser.h
android/app/src/main/java/com/moview/: MainActivity.kt  MainApplication.kt
android/app/src/test/cpp/: AdGuardJNIBridgeTest.cpp
ios/: AdBlockerManager.h  AdBlockerManager.mm  AdBlockerModule.h  AdBlockerModule.m  AdGuardWrapper.h  AdGuardWrapper.mm  Podfile  link-assets-manifest.json
ios/Moview/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Moview.xcodeproj/: project.pbxproj
ios/Moview.xcodeproj/xcshareddata/xcschemes/: Moview.xcscheme
ios/MoviewTests/: MoviewTests.m
node_modules_bak/: .package-lock.json
node_modules_bak/.generated/: .packager.bat
src/: App.tsx
src/components/: Genres.jsx  Movies.jsx  a.html
src/components/utils/: GradientText.jsx
src/modules/: AdBlocker.ts  index.ts
src/modules/AdBlocker/: README.md  types.ts
src/screens/: Account.jsx  EmbeddedPlayer.jsx  EmbeddedPlayerWithAdGuard.jsx  Explore.jsx  Explore.tsx  Favourite.jsx  Home.jsx  MovieDetails.jsx  Player.jsx  Series.jsx  TabBar.tsx  Welcome.jsx  Welcome.tsx
(+10 files in other folders)
